test fix login butoon ios

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -909,6 +909,3 @@ section > section > div{
     padding: 0px 20px 0px 20px;
 }
 /*Finance Admin*/
-.dropdown-cust a{
-    cursor: 'pointer';
-}
